# handwashing

./: .mxproject  CMakeLists.txt  Makefile  handwashing.ioc
Core/Inc/: FreeRTOSConfig.h  app_log.h
Core/Src/: freertos.c  main.c
cmake/: toolchain.cmake
